# FARM-stack-template

./: .env  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py  models.py  tests_pre_start.py  utils.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: items.py  login.py  users.py  utils.py
backend/app/core/: security.py
backend/app/db/: __init__.py  crud.py
backend/app/tests/: conftest.py  utils.py
backend/app/tests/api/routes/: test_items.py  test_login.py  test_users.py
backend/app/tests/crud/: test_user.py
frontend/: index.html
